--- a/JulianPerrottName/Web.Release.config
+++ b/JulianPerrottName/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-JulianPerrottName-20140130204635;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-JulianPerrottName-20140130204635.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
