--- a/JulianPerrottName/Web.Debug.config
+++ b/JulianPerrottName/Web.Debug.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="BlogEngineEntities" connectionString="metadata=res://*/BeModel.csdl|res://*/BeModel.ssdl|res://*/BeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOUCHPC;initial catalog=DB_70371_blogengine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
