Added welcome text. Cached Rss feed.

--- a/JulianPerrottName/Web.config
+++ b/JulianPerrottName/Web.config
@@ -10,7 +10,12 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-JulianPerrottName-20140130204635;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-JulianPerrottName-20140130204635.mdf" providerName="System.Data.SqlClient" />
-    <add name="BlogEngineEntities" connectionString="metadata=res://*/BeModel.csdl|res://*/BeModel.ssdl|res://*/BeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOUCHPC;initial catalog=DB_70371_blogengine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
+    <!--<add name="BlogEngineEntities" 
+         connectionString="metadata=res://*/BeModel.csdl|res://*/BeModel.ssdl|res://*/BeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=TOUCHPC;initial catalog=DB_70371_blogengine;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+         providerName="System.Data.EntityClient" />-->
+    <add name="BlogEngineEntities" connectionString="metadata=res://*/BeModel.csdl|res://*/BeModel.ssdl|res://*/BeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s10.winhost.com;initial catalog=DB_70371_blogengine;user id=DB_70371_blogengine_user;password=qwerty69;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
