--- a/JulianPerrottName/JulianPerrottName.csproj
+++ b/JulianPerrottName/JulianPerrottName.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -173,6 +175,7 @@
     <Compile Include="Areas\Home\Controllers\GalleryController.cs" />
     <Compile Include="Areas\Home\Controllers\HomeController.cs" />
     <Compile Include="Areas\Home\HomeAreaRegistration.cs" />
+    <Compile Include="Areas\Home\Models\FeedTabViewModel.cs" />
     <Compile Include="Cache\Cache.cs" />
     <Compile Include="Cache\CachedItem.cs" />
     <Compile Include="Cache\HttpRuntimeCache.cs" />
@@ -182,11 +185,15 @@
     </Compile>
     <Compile Include="Models\BlogPostSummary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BlogReader.cs" />
+    <Compile Include="Repository\ProxyFeedReader.cs" />
     <Compile Include="Repository\HtmlParser.cs" />
     <Compile Include="Repository\IBlogRepository.cs" />
-    <Compile Include="Repository\BlogRepository.cs">
+    <Compile Include="Repository\Repository.cs">
       <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
     </Compile>
+    <Compile Include="Repository\FeedReader.cs" />
+    <Compile Include="Repository\IFeedReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Home\css\animate.css" />
@@ -231,6 +238,13 @@
     <None Include="Areas\Home\Views\Gallery\Bubbles.cshtml" />
     <None Include="Areas\Home\Views\Gallery\Item.cshtml" />
     <None Include="Areas\Home\Views\Gallery\Text.cshtml" />
+    <Content Include="Areas\Home\Views\Shared\DisplayTemplates\SyndicationItem.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_FeedTab.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_RecentWorks.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_Services.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_Showcase.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_Updates.cshtml" />
+    <Content Include="Areas\Home\Views\Home\_Welcome.cshtml" />
     <None Include="BlogEngine\Admin\Reset.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -247,8 +261,10 @@
     <Content Include="Areas\Home\Views\Shared\_Scripts.cshtml" />
     <Content Include="Areas\Home\js\jquery-1.9.1.min.map" />
     <Content Include="Areas\Home\Views\Shared\DisplayTemplates\BlogPostSummary.cshtml" />
-    <Content Include="Areas\Home\Views\Home\BlogSummary.cshtml" />
-    <None Include="Areas\Home\Views\Web.config" />
+    <Content Include="Areas\Home\Views\Home\_BlogSummary.cshtml" />
+    <None Include="Areas\Home\Views\Web.config">
+      <SubType>Designer</SubType>
+    </None>
     <Content Include="Areas\Home\Views\Home\Index.cshtml" />
     <Content Include="BlogEngine\Web.config.txt" />
     <Content Include="BlogEngine\Web.sitemap" />
@@ -302,7 +318,6 @@
     <Content Include="Html\sign-up.html" />
     <Content Include="Html\team.html" />
     <Content Include="Html\ui-elements.html" />
-    <Content Include="Unity.Mvc4.README.txt" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -317,7 +332,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Home\Models\" />
     <Folder Include="Filters\" />
   </ItemGroup>
   <ItemGroup>
