--- a/JulianPerrottName/JulianPerrottName.csproj
+++ b/JulianPerrottName/JulianPerrottName.csproj
@@ -42,7 +42,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.SignalR.Client">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.2.0.3\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.0.3\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.0.3\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Owin">
+      <HintPath>..\packages\Microsoft.Owin.2.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.2.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security">
+      <HintPath>..\packages\Microsoft.Owin.Security.2.0.1\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
@@ -51,6 +69,13 @@
     </Reference>
     <Reference Include="Microsoft.Practices.Unity.Configuration">
       <HintPath>..\packages\Unity.3.0.1304.1\lib\Net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Newtonsoft.Json.5.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -84,9 +109,6 @@
     <Reference Include="Microsoft.Web.Mvc.FixedDisplayModes, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.Mvc.FixedDisplayModes.1.0.0\lib\net40\Microsoft.Web.Mvc.FixedDisplayModes.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
     </Reference>
@@ -169,7 +191,15 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\StartupOwin.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Areas\Feedback\Controllers\DemoController.cs" />
+    <Compile Include="Areas\Feedback\Controllers\PostRedirectGetController.cs" />
+    <Compile Include="Areas\Feedback\Controllers\PostRedirectGetRedirectGetController.cs" />
+    <Compile Include="Areas\Feedback\Controllers\SignalRController.cs" />
+    <Compile Include="Areas\Feedback\FeedbackAreaRegistration.cs" />
+    <Compile Include="Areas\Feedback\Models\TaskConnection.cs" />
+    <Compile Include="Areas\Feedback\Models\TaskService.cs" />
     <Compile Include="Areas\Home\Controllers\BlogController.cs" />
     <Compile Include="Areas\Home\Controllers\ContactController.cs" />
     <Compile Include="Areas\Home\Controllers\ErrorController.cs" />
@@ -199,6 +229,10 @@
     <Compile Include="Repository\IFeedReader.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Feedback\css\bootstrap.css" />
+    <Content Include="Areas\Feedback\images\ajax-loader.gif" />
+    <Content Include="Areas\Feedback\js\jquery-1.9.1.js" />
+    <Content Include="Areas\Feedback\js\jquery.signalR-2.0.3.js" />
     <Content Include="Areas\Home\css\animate.css" />
     <Content Include="Areas\Home\css\bootstrap.css" />
     <Content Include="Areas\Home\css\bootstrap.min.css" />
@@ -225,7 +259,10 @@
     <Content Include="Areas\Home\img\23-k080ea.png" />
     <Content Include="Areas\Home\img\23-k080ea_small.png" />
     <Content Include="Areas\Home\img\about.jpg" />
+    <Content Include="Areas\Home\img\bg1.jpg" />
+    <Content Include="Areas\Home\img\bg2.jpg" />
     <Content Include="Areas\Home\img\bg3.jpg" />
+    <Content Include="Areas\Home\img\bg4.jpg" />
     <Content Include="Areas\Home\img\blank.jpg" />
     <Content Include="Areas\Home\img\blog-1.jpg" />
     <Content Include="Areas\Home\img\blog-2.jpg" />
@@ -274,6 +311,18 @@
     <Content Include="Areas\Home\js\jquery.youtubepopup.min.js.map">
       <DependentUpon>jquery.youtubepopup.js</DependentUpon>
     </Content>
+    <Content Include="Areas\Feedback\Views\Web.config" />
+    <Content Include="Areas\Feedback\Views\Demo\Index.cshtml" />
+    <Content Include="Areas\Feedback\Views\PostRedirectGet\Completed.cshtml" />
+    <Content Include="Areas\Feedback\Views\PostRedirectGet\Index.cshtml" />
+    <Content Include="Areas\Feedback\Views\PostRedirectGetRedirectGet\Completed.cshtml" />
+    <Content Include="Areas\Feedback\Views\PostRedirectGetRedirectGet\Index.cshtml" />
+    <Content Include="Areas\Feedback\Views\PostRedirectGetRedirectGet\WaitForCompletion.cshtml" />
+    <Content Include="Areas\Feedback\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Feedback\Views\SignalR\Completed.cshtml" />
+    <Content Include="Areas\Feedback\Views\SignalR\Index.cshtml" />
+    <Content Include="Areas\Feedback\Views\SignalR\WaitForCompletion.cshtml" />
+    <Content Include="Areas\Feedback\Views\_ViewStart.cshtml" />
     <None Include="Areas\Home\Views\Gallery\Bubbles.cshtml" />
     <None Include="Areas\Home\Views\Gallery\Item.cshtml" />
     <None Include="Areas\Home\Views\Gallery\Text.cshtml" />
